<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimeLine.AddDate">

    <TextView
        android:id="@+id/add_date_topic"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_marginTop="76dp"
        android:text="Add Date"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/add_date_dateLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/add_date_topic">

        <TextView
            android:id="@+id/date_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="4dp"

            android:text="@string/add_new_date_date"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/date_EditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/add_date_timeLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/add_date_dateLinearLayout">

        <TextView
            android:id="@+id/time_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="4dp"

            android:text="@string/add_new_date_time"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/time_EditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/add_date_descriptionLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/add_date_timeLinearLayout">

        <TextView
            android:id="@+id/description_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="4dp"

            android:text="@string/add_new_date_description"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/date_description_EditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textSize="24sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveDate_floatActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="42dp"
        android:background="@android:drawable/ic_menu_save"
        android:clickable="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/discard_floatActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginBottom="42dp"
        android:clickable="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_delete" />
</androidx.constraintlayout.widget.ConstraintLayout>

