<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimeLine.TimeLine">


    <include
        layout="@layout/content_activity_single_trip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/date_list"
        android:layout_width="match_parent"
        android:layout_height="655dp"
        android:layout_marginBottom="8dp"

        android:divider="@null"
        android:dividerHeight="0dp"
        app:layout_constraintBottom_toTopOf="@+id/add_date_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/list_item_date" />


    <Button
        android:id="@+id/add_date_button"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"

        android:text="@string/add_date"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>