...
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:id="@+id/add_food_button"
        app:srcCompat="@android:drawable/ic_input_add"
        android:clickable="true"
        android:layout_marginEnd="8dp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/foods_linearLayout"
...
