<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_trip"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ListView
        android:id="@+id/list_view_of_trips"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ListView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/createtripFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/list_view_of_trips"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.308"
        app:srcCompat="@android:drawable/ic_input_add" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/trip_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="25dp"
        android:paddingTop="16dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/list_view_description">

        <Button
            android:id="@+id/my_trips_button"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="16dp"

            android:layout_weight="1.0"
            android:text="@string/btn_mytrips" />

        <Button
            android:id="@+id/sample_trips_button"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="16dp"
            android:layout_weight="1.0"
            android:text="@string/btn_sampletrips" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/trip_search_and_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="25dp"
        android:paddingTop="8dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/trip_buttons">

        <EditText
            android:id="@+id/SearchbyNameEditText"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="24sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/SearchForTripBt"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="center"
            app:fabSize="mini"
            app:srcCompat="@android:drawable/ic_menu_search" />

        <Spinner
            android:id="@+id/sorting_dropdown"
            android:layout_width="170dp"
            android:layout_height="41dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/list_view_description"
        android:layout_width="255dp"
        android:layout_height="55dp"
        android:text="@string/btn_sampletrips"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/list_view_of_trips"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211" />

    <Button
        android:id="@+id/language_btn"
        android:layout_width="54dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/btn_language"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/trip_buttons"
        app:layout_constraintEnd_toStartOf="@id/list_view_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>