...
            android:paddingRight="4dp"

            android:text="@string/create_trip_name"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/tripName_EditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textSize="24sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveTrip_floatActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="48dp"
        android:background="@android:drawable/ic_menu_save"
        android:clickable="true"
...
