...
    <string name="lunch_dinner_button">Lunch/Dinner</string>

    <string-array name="dropdown_string_array">
        <item>sort by...</item>
        <item>trip name</item>
    </string-array>
    <string name="btn_mytrips">MY TRIPS</string>
    <string name="btn_sampletrips">SAMPLE TRIPS</string>
    <string name="btn_sharedtrips">SHARED TRIPS</string>
    <string name="btn_language">RU</string>
    <string name="txtfield_name">Name: </string>
    <string name="txtfield_dest">Destinations</string>
    <string name="txtfield_accomodation">Accomodation</string>
...
